继承 spring mvc test, 集成 rabbitMq 组件. 配置异步任务, 配置定时任务. 配置spring mail.

--- a/user-server/src/main/resources/application.properties
+++ b/user-server/src/main/resources/application.properties
@@ -33,6 +33,17 @@ spring.datasource.druid.druid-servlet-enable=true
 spring.datasource.druid.druid-sql-filter-enable=true
 #mybatis.configuration.map-underscore-to-camel-case=true
 debug=true
+# Redis
 spring.redis.host=localhost
 spring.redis.port=6379
+##  RabbitMQ
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+## \u90AE\u7BB1\u914D\u7F6E
+spring.mail.username=meetsong@foxmail.com
+spring.mail.password=umvegcxovghfbfdb
+spring.mail.host=smtp.qq.com
+spring.mail.properties.mail.smtp.ssl.enable=true
 
