--- a/user-server/src/main/resources/application.properties
+++ b/user-server/src/main/resources/application.properties
@@ -46,4 +46,18 @@ spring.mail.username=meetsong@foxmail.com
 spring.mail.password=umvegcxovghfbfdb
 spring.mail.host=smtp.qq.com
 spring.mail.properties.mail.smtp.ssl.enable=true
+## Ferrmarker \u914D\u7F6E
+spring.resources.static-locations=classpath:/META-INF/resources/, classpath:/resources/,classpath:/static/, classpath:/public/,classpath:/templates/
+spring.freemarker.enabled=true
+spring.freemarker.settings.number_format='0.##'
+# \u8BBE\u5B9Aftl\u6587\u4EF6\u8DEF\u5F84
+spring.freemarker.template-loader-path=classpath:/templates
+spring.freemarker.cache=false
+spring.freemarker.charset=UTF-8
+spring.freemarker.check-template-location=true
+spring.freemarker.content-type=text/html
+spring.freemarker.expose-request-attributes=false
+spring.freemarker.expose-session-attributes=false
+spring.freemarker.request-context-attribute=request
+spring.freemarker.suffix=.ftl
 
