--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,6 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-
     <modules>
         <module>eureka-server-01</module>
         <module>eureka-server-02</module>
@@ -12,6 +11,7 @@
         <module>user-server</module>
         <module>shanjiancaofu-springboot-autoconfigurer</module>
         <module>druid-spring-boot-stater</module>
+        <module>elstaticsearch-demo</module>
     </modules>
 
     <groupId>com.shanjiancaofu</groupId>
@@ -66,7 +66,25 @@
 
     </dependencies>
     <dependencyManagement>
+
         <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+                <version>2.1.6.RELEASE</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/io.searchbox/jest -->
+            <dependency>
+                <groupId>io.searchbox</groupId>
+                <artifactId>jest</artifactId>
+                <version>6.3.1</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-freemarker</artifactId>
+                <version>2.1.6.RELEASE</version>
+            </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-amqp</artifactId>
