--- a/pom.xml
+++ b/pom.xml
@@ -68,12 +68,18 @@
     <dependencyManagement>
 
         <dependencies>
+
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-security</artifactId>
+                <version>2.1.6.RELEASE</version>
+            </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
                 <version>2.1.6.RELEASE</version>
             </dependency>
-            <!-- https://mvnrepository.com/artifact/io.searchbox/jest -->
             <dependency>
                 <groupId>io.searchbox</groupId>
                 <artifactId>jest</artifactId>
