--- a/user-server/src/main/resources/application.properties
+++ b/user-server/src/main/resources/application.properties
@@ -59,5 +59,5 @@ spring.freemarker.content-type=text/html
 spring.freemarker.expose-request-attributes=false
 spring.freemarker.expose-session-attributes=false
 spring.freemarker.request-context-attribute=request
-spring.freemarker.suffix=.ftl
+spring.freemarker.suffix=.html
 
