深度集成 security 和 spring boot admin 监控

--- a/eureka-server-01/src/main/resources/bootstrap.yml
+++ b/eureka-server-01/src/main/resources/bootstrap.yml
@@ -4,12 +4,29 @@ server:
 eureka:
   instance:
     hostname: localhost
+    metadata-map:
+      startup: ${random.int}    #needed to trigger info and endpoint update after restart
+      user.name: ${spring.security.user.name}
+      user.password: ${spring.security.user.password}
   client:
     registerWithEureka: true
-    fetchRegistry: false
+    fetchRegistry: true
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://${spring.security.user.name}:${spring.security.user.password}@127.0.0.1:${server.port}/eureka/
+      leaseRenewalIntervalInSeconds: 10
+      health-check-url-path: /actuator/health
+
+
+
 
 spring:
   application:
     name: eureka-server-01
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: ALWAYS
