--- a/user-client/src/main/resources/bootstrap.yml
+++ b/user-client/src/main/resources/bootstrap.yml
@@ -1,7 +1,15 @@
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/,http://localhost:8762/eureka/
+      defaultZone: http://eureka:123456@localhost:8761/eureka/
+    registryFetchIntervalSeconds: 5
+  instance:
+    leaseRenewalIntervalInSeconds: 10
+    health-check-url-path: /actuator/health
+    metadata-map:
+      startup: ${random.int}    #needed to trigger info and endpoint update after restart
+      user.name: zhangshan
+      user.password: 123456
 
 
 spring:
