--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8888
+eureka-name=eureka
+eureka-pd=123456
+eureka-port=8761
+eureka.client.serviceUrl.defaultZone=http://${eureka-name}:${eureka-pd}@localhost:${eureka-port}/eureka/
