--- a/eureka-server-01/src/main/resources/application.properties
+++ b/eureka-server-01/src/main/resources/application.properties
@@ -1,2 +1,17 @@
 debug=true
-logging.file=
+#logging.file=
+spring.security.user.name=eureka
+spring.security.user.password=123456
+management.endpoint.shutdown.enabled=true
+management.endpoint.health.enabled=true
+management.endpoint.info.enabled=true
+# \u5F00\u542F\u5176\u4ED6\u7AEF\u70B9,false \u4E3A\u9ED8\u8BA4\u4E0D\u5F00\u542F\u5176\u4ED6\u7AEF\u70B9
+management.endpoints.enabled-by-default=true
+#\u66B4\u9732\u6240\u6709\u7684\u7AEF\u70B9
+management.endpoints.web.exposure.include=*
+#management.endpoints.web.exposure.exclude=env\uFF0Cbeans
+eureka.client.healthcheck.enabled=true
+# \u663E\u793A\u8BE6\u7EC6\u4FE1\u606F
+management.endpoint.health.show-details=always
+management.endpoints.web.cors.allowed-origins=*
+management.endpoints.web.cors.allowed-methods=GET,POST
