--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>shanjiancaofu-springboot-autoconfigurer</module>
         <module>druid-spring-boot-stater</module>
         <module>elstaticsearch-demo</module>
+        <module>mgrsite</module>
     </modules>
 
     <groupId>com.shanjiancaofu</groupId>
@@ -36,7 +37,6 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
             <version>${springboot-version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
@@ -68,7 +68,6 @@
     <dependencyManagement>
 
         <dependencies>
-
 
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -151,6 +150,33 @@
                 <artifactId>spring-boot-starter-mail</artifactId>
                 <version>2.1.6.RELEASE</version>
             </dependency>
+            <dependency>
+                <groupId>de.codecentric</groupId>
+                <artifactId>spring-boot-admin-starter-client</artifactId>
+                <version>2.1.6</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>2.8.5</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-config-client</artifactId>
+                <version>2.1.1.RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-config-server</artifactId>
+                <version>2.1.1.RELEASE</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-jetty</artifactId>
+                <version>2.1.6.RELEASE</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -160,6 +186,13 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${springboot-version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>build-info</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
