--- a/user-client/src/main/resources/application.properties
+++ b/user-client/src/main/resources/application.properties
@@ -1,13 +1,26 @@
 spring.cloud.config.name=config-server
-## 关联 profile
+## \u5173\u8054 profile
 spring.cloud.config.profile=dev
-## 关联 label
+## \u5173\u8054 label
 spring.cloud.config.label=master
-## 激活 Config Server 服务发现
+## \u6FC0\u6D3B Config Server \u670D\u52A1\u53D1\u73B0
 spring.cloud.config.discovery.enabled=true
-## Config Server 服务器应用名称
+## Config Server \u670D\u52A1\u5668\u5E94\u7528\u540D\u79F0
 spring.cloud.config.discovery.serviceId=config-server
 server.port=8890
 spring.cloud.config.uri=http://localhost:8888
 user.service.name=user-server
 feign.hystrix.enabled=true
+management.endpoint.shutdown.enabled=true
+management.endpoint.health.enabled=true
+management.endpoint.info.enabled=true
+# \u5F00\u542F\u5176\u4ED6\u7AEF\u70B9,false \u4E3A\u9ED8\u8BA4\u4E0D\u5F00\u542F\u5176\u4ED6\u7AEF\u70B9
+management.endpoints.enabled-by-default=true
+#\u66B4\u9732\u6240\u6709\u7684\u7AEF\u70B9
+management.endpoints.web.exposure.include=*
+#management.endpoints.web.exposure.exclude=env\uFF0Cbeans
+eureka.client.healthcheck.enabled=true
+# \u663E\u793A\u8BE6\u7EC6\u4FE1\u606F
+management.endpoint.health.show-details=always
+management.endpoints.web.cors.allowed-origins=*
+management.endpoints.web.cors.allowed-methods=GET,POST
