--- a/user-server/src/main/resources/application.properties
+++ b/user-server/src/main/resources/application.properties
@@ -60,4 +60,30 @@ spring.freemarker.expose-request-attributes=false
 spring.freemarker.expose-session-attributes=false
 spring.freemarker.request-context-attribute=request
 spring.freemarker.suffix=.html
+management.endpoint.shutdown.enabled=true
+management.endpoint.health.enabled=true
+management.endpoint.info.enabled=true
+
+
+
+
+# \u5F00\u542F\u5176\u4ED6\u7AEF\u70B9,false \u4E3A\u9ED8\u8BA4\u4E0D\u5F00\u542F\u5176\u4ED6\u7AEF\u70B9
+management.endpoints.enabled-by-default=true
+#\u66B4\u9732\u6240\u6709\u7684\u7AEF\u70B9
+management.endpoints.web.exposure.include=*
+#management.endpoints.web.exposure.exclude=env\uFF0Cbeans
+eureka.client.healthcheck.enabled=true
+# \u663E\u793A\u8BE6\u7EC6\u4FE1\u606F
+management.endpoint.health.show-details=always
+management.endpoints.web.cors.allowed-origins=*
+management.endpoints.web.cors.allowed-methods=GET,POST
+## \u8BBE\u7F6E spring boot amdin
+spring.boot.admin.client.url=http://localhost:9999
+
+
+
+logging.file=/home/jeesk/Desktop/openProject/cloud-demo/user-server/cmpp-api.log 
+logging.pattern.file=%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr(${PID}){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n%wEx 
+
+
 
